--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
 
     <input type="file" id="fileUploader" multiple size="50" onchange="loadFiles()">
 
+    <h1>Spawn1 Energy</h1>
     <div>
         <canvas id="spawnEnergyChart" width="100" height="400"></canvas>
+    </div>
+
+    <br />
+
+    <h1>Creep Count</h1>
+    <div>
+        <canvas id="creepCountChart" width="100" height="400"></canvas>
     </div>
 
     <script src="vendor/moment.js" type="text/javascript"></script>
